# scooterbot_secretary

./: .gitignore  Dockerfile  Makefile  manage.py  pyproject.toml
frontend/public/: index.html
frontend/src/: App.js  HomePage.js  Login.js  LoginStep4.js  PrivacyPolicy.js  SignUp.js  TermsOfService.js
secretary/: __init__.py  account.py  account_linking.py  alexa.py  apps.py  asgi.py  asgi_private.py  calendar.py  celery_tasks.py  config.py  database.py  discord_bot.py  google_apis.py  jimming.py  job_scheduler.py  logger.py  notifications.py  read.py  service_config.py  settings.py  settings_private.py  task_queue.py  test.py  test_tesla.py  todo_emailer.py  urls.py  urls_private.py  write.py  wsgi.py
secretary/agents/: account_administration_agent.py  base.py  calendar_agent.py  gmail_agent.py  house_agent.py  main_agent.py  tesla.py  tesla_agent.py  todo_agent.py
secretary/clients/: discord.py  house_agent.py  tesla_agent.py
secretary/data_models/: __init__.py  channel.py  event.py  gmail_thread.py  oauth.py  todo.py  user.py
secretary/ext_apis/: base.py  hubitat.py
secretary/interface/: database.py
secretary/memory/: bootstrap_db.py  db.py  engram.py  fact.py  load_test_data.py  test_search.py
secretary/tasks/: account.py  calendar.py  question.py  todo.py
secretary/views/: account.py  base.py  calendar.py  home.py  link_accounts.py  login.py  privacy_policy.py  private.py  read.py  setup.py  setup_alexa.py  signup.py  tos.py  twilio.py  webhooks.py
tests/: conftest.py  secretary.yaml
tests/agents/: calendar_agent_test.py  gmail_agent_query_expansion.py  gmail_agent_test.py  todo_agent_test.py
