[tool.poetry]
name = "secretary"
version = "0.1.0"
description = ""
authors = ["Jimming Cheng <jimming@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
arrow = "^1.2.3"
ask-sdk = "^1.18.0"
ask-sdk-dynamodb-persistence-adapter = "^1.18.0"
boto3 = "^1.26.94"
Django = "^4.1.7"
django-ask-sdk = "^1.0.0"
google-api-core = "^2.11.0"
google-api-python-client = "^2.81.0"
ipython = "^8.11.0"
oauth2client = "^4.1.3"
oauth-userdb = "^1.0.4"
pyjwt = "^2.6.0"
pystaticconfiguration = "^0.11.1"
requests = "^2.28.2"
uwsgi = "^2.0.21"
pytz = "^2022.7.1"
pyyaml = "^6.0"
openai = "^0.28.1"
schedule = "^1.2.0"
llm-task-handler = "^2.0.0"
llm-discord-bot = "^2.0.1"
discord = "^2.3.2"
tiktoken = "^0.5.1"

[tool.poetry.group.dev.dependencies]
flake8 = "<6"
pytest = "^7.2.2"
mock = "^5.0.1"
mypy = "^1.1.1"
types-mock = "^5.0.0.5"
types-requests = "^2.28.11.15"
types-pyyaml = "^6.0.12.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
