[tool.poetry]
name = "secretary"
version = "0.1.0"
description = ""
authors = ["Jimming Cheng <jimming@gmail.com>"]
readme = "README.md"

[[tool.poetry.source]]
name = "scooterbot-pypi"
url = "http://pypi.scooterbot.ai:7974/simple/"
priority = "supplemental"

[tool.poetry.dependencies]
python = "^3.11"
arrow = "^1.2.3"
ask-sdk = "^1.18.0"
ask-sdk-dynamodb-persistence-adapter = "^1.18.0"
boto3 = "^1.26.94"
Django = "^5.2.3"
django-ask-sdk = "^1.0.0"
google-api-core = "^2.11.0"
google-api-python-client = "^2.169.0"
ipython = "^8.11.0"
oauth2client = "^4.1.3"
oauth-userdb = "^1.0.5"
pyjwt = "^2.6.0"
uwsgi = "^2.0.21"
pytz = "^2022.7.1"
pyyaml = "^6.0"
openai = "^1.93.0"
discord = "^2.3.2"
tiktoken = "^0.5.1"
redis = "^5.0.1"
twilio = "^8.11.1"
weaviate-client = "^4.10.2"
pydantic = "^2.10.4"
openai-agents = "^0.1.0"
googlemaps = "^4.10.0"
mcp = "^1.9.0"
httpx = "^0.28.1"
taskiq = "^0.11.17"
taskiq-redis = "^1.0.9"
sb-service-util = "^2.0.1"

[tool.poetry.group.dev.dependencies]
flake8 = "<6"
pytest = "^7.2.2"
mock = "^5.0.1"
mypy = "^1.1.1"
types-mock = "^5.0.0.5"
types-requests = "^2.28.11.15"
types-pyyaml = "^6.0.12.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
